Wed Mar  4 03:04:05 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.cpp:

        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushSupplier.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/Consumer.h:
        * orbsvcs/orbsvcs/Notify/ETCL_Filter.cpp:
        * orbsvcs/orbsvcs/Notify/ETCL_FilterFactory.h:
        * orbsvcs/orbsvcs/Notify/Method_Request_Dispatch.cpp:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.h:

        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.cpp:

        * orbsvcs/orbsvcs/Notify/Validate_Client_Task.cpp:
          Fuzz fixes.
        
Tue Mar  3 23:11:40 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Persistent_Filter/Filter.cpp:
          Silence warnings on nondebug builds.

Tue Mar  3 21:12:10 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.cpp:

        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/CosEC_ProxyPushSupplier.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/Any/ProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/CosNotify_Service.cpp:
        * orbsvcs/orbsvcs/Notify/ETCL_Filter.cpp:
        * orbsvcs/orbsvcs/Notify/Method_Request_Dispatch.cpp:

        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushSupplier.cpp:

        * orbsvcs/orbsvcs/Notify/Structured/StructuredProxyPushConsumer.cpp:

          Fix debug output formatting for wchar consistency.

Tue Mar  3 13:01:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3547_Regression/Stock_Quoter_Client.cpp:
          Added a worker thread
